<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/login_background"
        tools:context=".RegistrationFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:text=""
            android:textSize="50dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="5">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="30dp"
                android:hint="@string/enter_your_full_name"
                android:textColorHint="@color/black">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_your_email_id"
                android:textColorHint="@color/black"
                android:textSize="30dp">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_your_your_user_name"
                android:textColorHint="@color/black"
                android:textSize="30dp">

            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/black"
                android:textSize="30sp">

            </EditText>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/sign_upBTN"
                android:textStyle="bold"
                android:textSize="23dp"
                android:layout_gravity="center">

            </Button>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_a_account_sign_here"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="26dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>