<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".HomeFragment"
        android:background="@drawable/baground">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logo"

            >

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="FEROT DEI + FEROT NEI"
            android:textSize="35dp"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19dp"
                android:textColor="@color/primaryTextColor"
                android:text="Username"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your email"
                android:textSize="22dp" />

            <TextView
                android:textColor="@color/primaryTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19dp"
                android:text="Password"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Your Password"
                android:textSize="22dp"
                android:textColor="@color/primaryTextColor" />

            <TextView

                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_your_password"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/primaryTextColor" />
            <TextView
                style="@style/parent"
                android:textAlignment="textEnd"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:text="@string/Register"
                android:layout_marginTop="@dimen/loginViewsMargin" />


        </LinearLayout>

    </LinearLayout>
</layout>